--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
     "homepage": "https://cakephp.org",
     "type": "project",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/rooslunn/debug-kit-extras.git"
+        }
+    ],
     "require": {
         "php": ">=7.2",
         "cakephp/cakephp": "^4.3",
@@ -16,7 +22,8 @@
         "cakephp/cakephp-codesniffer": "^4.5",
         "cakephp/debug_kit": "~4.0",
         "josegonzalez/dotenv": "^3.2",
-        "phpunit/phpunit": "~8.5.0 || ^9.3"
+        "phpunit/phpunit": "~8.5.0 || ^9.3",
+        "rooslunn/debug-kit-extras": "dev-main"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
@@ -26,15 +33,13 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "DebugKitExtras\\": "plugins/DebugKitExtras/src/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/",
-            "DebugKitExtras\\Test\\": "plugins/DebugKitExtras/tests/"
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
         }
     },
     "scripts": {
